5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1578_1330.log
== TEST (2019-03-12 12:19:50) 
-- CODE:
print(41,66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:20:09) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:20:23) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.148823
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:21:00) 
-- CODE:
round(44, 66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:21:39) 
-- CODE:
round(44, 66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:22:42) 
-- CODE:
print(round(44, 66))
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:25:27) 
-- CODE:
print(round(44, 66))
-- EXECUTION TIME:
0.283159
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:26:28) 
-- CODE:
print(44,66)
-- OUTPUT:
44 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:26:43) 
-- CODE:
print(44,66)
-- OUTPUT:
44 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:26:54) 
-- CODE:
print(44.66)
-- OUTPUT:
44.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:28:00) 
-- CODE:
print(44.66)
-- OUTPUT:
44.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:29:53) 
-- CODE:
print(x, n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x, n)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:30:23) 
-- CODE:
print(41, 66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:30:37) 
-- CODE:
print(41. 66)
-- ERROR:
File "XXXX", line 1
    print(41. 66)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:30:46) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:30:53) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.13151
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:34:12) 
-- CODE:
print(round(41, 66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:35:28) 
-- CODE:
print(round(41, 66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:36:35) 
-- CODE:
print(round(41, 66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:36:52) 
-- CODE:
print(round(41, 66))
-- EXECUTION TIME:
0.183597
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:10:19) 
-- CODE:
print(round(250%6))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:10:29) 
-- CODE:
print(round(250 % 6))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:10:42) 
-- CODE:
print(round(250 / 6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:31) 
-- CODE:
print(round(250%6))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:38) 
-- CODE:
print(round(250 % 6))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:55) 
-- CODE:
print(round(250 / 6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:24:23) 
-- CODE:
round(250, 6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:24:53) 
-- CODE:
round(250 / 6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:25:39) 
-- CODE:
round(41,)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:25:49) 
-- CODE:
round(41, n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41, n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:25:57) 
-- CODE:
round(41, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41, n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:26:32) 
-- CODE:
round(41, 66)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(41, n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:26:47) 
-- CODE:
round(41. 66)
-- ERROR:
File "XXXX", line 1
    round(41. 66)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:05:49) 
-- CODE:
print(round(250, 2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:06:33) 
-- CODE:
print(round(41, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:08:20) 
-- CODE:
print(round(41, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:13:43) 
-- CODE:
print(round(250, 6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:15:01) 
-- CODE:
print(round(41, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:15:36) 
-- CODE:
print(round(41, 66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:16:42) 
-- CODE:
print(round(41, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:18:13) 
-- CODE:
print(round(41, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:21:03) 
-- CODE:
print(round(41, 1))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:22:01) 
-- CODE:
print(round(41,66, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(41,66, 1))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:22:16) 
-- CODE:
print(round(41,66, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(41,66, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:22:43) 
-- CODE:
print(round(41, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:29:48) 
-- CODE:
print(round(5/7, 2))
-- OUTPUT:
0.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:30:00) 
-- CODE:
print(round(5/7, 2))
-- EXECUTION TIME:
0.185909
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
0.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:30:37) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:30:44) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.201598
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
